--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
+    "material-table": "^1.5.0",
     "npm-run-all": "4.1.3",
     "perfect-scrollbar": "1.4.0",
     "react": "16.5.2",
