--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
+    "cross-env": "^5.2.0",
     "material-table": "^1.5.0",
     "npm-run-all": "4.1.3",
     "perfect-scrollbar": "1.4.0",
@@ -27,7 +28,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env NODE_PATH=./src/ react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -57,8 +58,8 @@
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-import-rename": "1.0.1",
+    "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-preset-es2015": "6.24.1"
