--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-scripts": "1.1.5",
     "react-swipeable-views": "0.12.17",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "vertical-timeline-component-for-react": "^1.0.6"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=./src/ react-scripts start",
