--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "16.5.2",
     "react-chartist": "0.13.1",
     "react-dom": "16.5.2",
+    "react-dual-listbox": "^1.4.2",
     "react-google-maps": "9.4.5",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.5",
